# bioservices

./: .codacy.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  environment.yml  environment_rtd.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  upload.sh
.github/workflows/: :  all.yml  all_1.yml  all_2.yml  all_3.yml  all_4.yml  arrayexpress.yml  arrayexpressbigg.yml  bigg.yml  biocarta.yml  biocontainers.yml  biodbnet.yml  biogrid.yml  biomart.yml  biomodels.yml  chebi.yml  chembl.yml  chemspider.yml  ci.yml  clinvitae.yml  cog.yml  createCI.py  dbfetch.yml  ena.yml  ensembl.yml  eutils.yml  eva.yml  geo.yml  hgnc.yml  intact_complex.yml  kegg.yml  muscle.yml  mygeneinfo.yml  ncbiblast.yml  notebooks.yml  omicsdi.yml  omnipath.yml  panther.yml  pathwaycommons.yml  pdb.yml  (+18 more)
attic/: README.txt  geneprof.py
bioservices/: README.rst  README.txt  setup.cfg  setup.py
bioservices/doc/: ChangeLog.txt
bioservices/doc/source/: ChangeLog.rst  applications.rst  biomart.rst  biomodels.rst  biopython.rst  bioservices2.xcf  compound_tutorial.rst  conf.py  contributors.rst  convertor_tutorial.rst  developers.rst  external_references.rst  faqs.rst  galaxy.rst  geneprof_tutorial.rst  index.rst  kegg_tutorial.rst  notebooks.rst  protein.rst  pymol.rst  quickstart.rst  references.rst  tutorials.rst
bioservices/src/bioservices/: __init__.py  arrayexpress.py  biocarta.py  biodbnet.py  biogrid.py  biomart.py  biomodels.py  chebi.py  chembl.py  chembldb.py  chembldb_beta.py  chemspider.py  eutils.py  geneprof.py  hgnc.py  htmltools.py  kegg.py  kegg_oldwsdl.py  microarray.py  miriam.py  muscle.py  ncbiblast.py  nciblast.py  panther.py  pathwaycommons.py  pdb.py  pfam.py  picr.py  psicquic.py  quickgo.py  reactome.py  rhea.py  services.py  settings.py  threaded_request.py  unichem.py  (+5 more)
bioservices/test/: settings.py  test_apps_fasta.py  test_apps_peptides.py  test_apps_taxonomy.py  test_arrayexpress.py  test_biodbnet.py  test_biomart.py  test_biomodels.py  test_chebi.py  test_chembl.py  test_chembldb.py  test_chemspider.py  test_eutils.py  test_geneprof.py  test_go.py  test_hgnc.py  test_kegg.py  test_kegg_oldwsdl.py  test_miriam.py  test_muscle.py  test_ncbiblast.py  test_pathwaycommons.py  test_pdb.py  test_picr.py  test_psicquic.py  test_reactome.py  test_rhea.py  test_services.py  test_unichem.py  test_uniprot.py  test_wikipathway.py  test_wsdbfetch.py  test_xmltools.py
doc/: ChangeLog.rst  Makefile  biomart.rst  biomodels.rst  biopython.rst  cli.rst  compound_tutorial.rst  conf.py  contributors.rst  convertor_tutorial.rst  developers.rst  external_references.rst  faqs.rst  galaxy.rst  geneprof_tutorial.rst  index.rst  kegg_tutorial.rst  make.bat  notebooks.rst  pathway_tutorial.rst  protein.rst  pymol.rst  pymol_app.py  quickstart.rst  references.rst  requirements.txt  sg_execution_times.rst  tutorials.rst
doc/auto_examples/: index.rst  plot_kegg_relations.codeobj.json  plot_kegg_relations.ipynb  plot_kegg_relations.py.md5  plot_kegg_relations.rst  plot_kegg_relations_codeobj.pickle  sg_execution_times.rst
doc/galaxy/: uniprot.xml
doc/history/: README.md  evolution_summary.rst  generate_history_plots.py
doc/notebooks/: ArrayExpress.ipynb  BioMart.ipynb  BioModels.ipynb  ChEMBL.ipynb  DrugDiscovery.ipynb  ENA.ipynb  EUtils.ipynb  Ensembl.ipynb  Entrez_EUtils.ipynb  Gene_Mapping.ipynb  InterPro.ipynb  KEGG.ipynb  MUSCLE.ipynb  NCBIBlast.ipynb  Overview.ipynb  UniProt.ipynb  WikiPathway.ipynb
doc/source/: ChangeLog.rst  applications.rst  biomart.rst  biomodels.rst  bioservices.xcf  compound_tutorial.rst  conf.py  contributors.rst  convertor_tutorial.rst  developers.rst  external_references.rst  faqs.rst  index.rst  kegg_tutorial.rst  notebooks.rst  pymol_app.py  quickstart.rst  references.rst  tutorials.rst
examples/: README.txt  plot_kegg_relations.py
notebooks/: ENA.ipynb  EUtils.ipynb  Ensembl.ipynb
notebooks/ENA/: ENA.ipynb
notebooks/introduction/: Overview.ipynb
notebooks/uniprot/: uniprot_demo.ipynb
src/bioservices/: .pride.py.swp  FN433596_1.fa  __init__.py  __main__.py  _compat.py  arrayexpress.py  bigg.py  biocarta.py  biocontainers.py  biodbnet.py  biogrid.py  biomart.py  biomodels.py  chebi.py  chembl.py  chembldb.py  chemspider.py  clinvitae.py  cog.py  dbfetch.py  ena.py  ensembl.py  eutils.py  eva.py  filename.txt  geneprof.py  geo.py  hgnc.py  htmltools.py  intact.py  interpro.py  kegg.py  main.py  miriam.py  muscle.py  mygeneinfo.py  ncbiblast.py  ncbiblastapi.py  omicsdi.py  omnipath.py  (+31 more)
test/: conftest.py  settings.py  test_apps_download.py  test_apps_fasta.py  test_apps_peptides.py  test_apps_taxonomy.py  test_arrayexpress.py  test_bigg.py  test_biocarta.py  test_biocontainers.py  test_biodbnet.py  test_biogrid.py  test_biomart.py  test_biomodels.py  test_chebi.py  test_chembl.py  test_chemspider.py  test_clinvitae.py  test_cog.py  test_dbfetch.py  test_ena.py  test_ensembl.py  test_eutils.py  test_eva.py  test_geneprof.py  test_go.py  test_hgnc.py  test_intact_complex.py  test_kegg.py  test_kegg_oldwsdl.py  test_main.py  test_miriam.py  test_muscle.py  test_mygeneinfo.py  test_ncbiblast.py  test_omicsdi.py  test_omnipath.py  test_panther.py  test_pathwaycommons.py  test_pdb.py  (+18 more)
test/attic/: _test_miriam.py  test_geneprof.py
test/webservices/: conftest.py  test_arrayexpress.py  test_bigg.py  test_biocarta.py  test_biocontainers.py  test_biodbnet.py  test_biogrid.py  test_biomart.py  test_biomodels.py  test_chebi.py  test_chembl.py  test_chemspider.py  test_cog.py  test_dbfetch.py  test_ena.py  test_ensembl.py  test_eutils.py  test_eva.py  test_geo.py  test_hgnc.py  test_intact_complex.py  test_interpro.py  test_kegg.py  test_muscle.py  test_mygeneinfo.py  test_ncbiblast.py  test_ncbiblastapi.py  test_omicsdi.py  test_omnipath.py  test_panther.py  test_pathwaycommons.py  test_pdb.py  test_pdbe.py  test_pfam.py  test_picr.py  test_pride.py  test_proteins.py  test_psicquic.py  test_pubchem.py  test_quickgo.py  (+9 more)
(+45 files in other folders)
