[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bioservices"
version = "1.12.0"
description = "Access to Biological Web Services from Python"
authors = [{name="Thomas Cokelaer", email="thomas.cokelaer@pasteur.fr"}]
license = "GPLv3"
readme = "README.rst"
keywords = ["BioServices", "WebServices", "Biology", "ChEBI", "UniChem", "Kegg", "KEGG", "BioModels", "EUtils", "UniProt", "PICR", "ArrayExpress", "MUSCLE", "QuickGO", "PDB", "PSICQUIC", "Blast", "BioMART", "PantherDB", "BioGRID", "MIRIAM", "BioMart", "GeneProf", "ChEMBL", "ChemSpider",  "HGNC", "PathwayCommons", "Rhea", "Ensembl"]

classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

requires-python = ">=3.9,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "appdirs (>=1.4.4,<2.0.0)",
    "matplotlib (>=3.9)",
    "easydev (>=0.13.3,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich-click (>=1.8.5,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "grequests (>=0.7.0,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "suds-community (>=1.2.0,<2.0.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "pandas (>2.2)"

]

[project.scripts]
bioservices = "bioservices.main:main"


[project.urls]
Homepage = "https://bioservices.readthedocs.io"
Repository = "https://github.com/cokelaer/bioservices"
Issues = "https://github.com/cokelaer/bioservices/issues"
Documentation =  "https://bioesrvices.readthedocs.io"



[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-runner = "^6.0.1"
coveralls = "^3.3.1"
flaky = "^3.7.0"


[tool.poetry.group.doc.dependencies]
sphinx = ">3"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "^0.15.0"




